--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trivia-test",
-  "homepage": "/trivia-game",
+  "homepage": "https://gesse-carlos.github.io/trivia-game/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
